copy-css: Make copy a configurable SASS library.

--- a/client/src/stylesheets/app.scss
+++ b/client/src/stylesheets/app.scss
@@ -1,5 +1,5 @@
 @use './utils/utils';
-@use './copy/copy.scss';
+@use './lib/copy/copy.scss';
 @use './themes/themes.scss';
 @use './layouts/layouts.scss';
 @use './pages/pages.scss';
