--- a/server/pages/templates/pages/pages/style_guide/_lists.html
+++ b/server/pages/templates/pages/pages/style_guide/_lists.html
@@ -1,37 +1,39 @@
 <jr-panel>
-  <h2>Lists</h2>
-  <h3>Ordered List</h3>
-  <ol>
-    <li>Item 1.</li>
-    <li>Item 2.</li>
-    <li>Item 3.</li>
-    <li>Item 4.</li>
-    <li>Item 5.</li>
-  </ol>
-  <h3>Unordered List</h3>
-  <ul>
-    <li>Item 1.</li>
-    <li>Item 2.</li>
-    <li>Item 3.</li>
-    <li>Item 4.</li>
-    <li> This is a nested list.
-      <ul>
-        <li>Nested list item 1.</li>
-        <li>Nested list item 2.</li>
-      </ul>
-    </li>
-  </ul>
-  <h3>Definition List</h3>
-  <dl>
-    <dt>Term 1</dt>
-    <dd>This is a definition.</dd>
-    <dt>Term 2</dt>
-    <dd>This is another definition</dd>
-    <dt>Term 3</dt>
-    <dd>This is another definition</dd>
-    <dt>Term 4</dt>
-    <dd>This is another definition</dd>
-    <dt>Term 5</dt>
-    <dd>This is another definition</dd>
-  </dl>
+  <div class="copy">
+    <h2>Lists</h2>
+    <h3>Ordered List</h3>
+    <ol>
+      <li>Item 1.</li>
+      <li>Item 2.</li>
+      <li> This is a nested list.
+        <ol>
+          <li>Nested list item 1.</li>
+          <li>Nested list item 2.</li>
+        </ol>
+      </li>
+      <li> This is an unordered list.
+        <ul>
+          <li>Nested list item 1.</li>
+          <li>Nested list item 2.</li>
+        </ul>
+      </li>
+    </ol>
+    <h3>Unordered List</h3>
+    <ul>
+      <li>Item 1.</li>
+      <li>Item 2.</li>
+      <li> This is a nested list.
+        <ul>
+          <li>Nested list item 1.</li>
+          <li>Nested list item 2.</li>
+        </ul>
+      </li>
+      <li> This is an ordered list.
+        <ol>
+          <li>Nested list item 1.</li>
+          <li>Nested list item 2.</li>
+        </ol>
+      </li>
+    </ul>
+  </div>
 </jr-panel>
