--- a/server/pages/templates/pages/pages/style_guide/_paragraphs.html
+++ b/server/pages/templates/pages/pages/style_guide/_paragraphs.html
@@ -1,4 +1,6 @@
 <jr-panel>
-  <h2>Paragraphs</h2>
-  {% lorem 2 p %}
+  <div class="copy">
+    <h2>Paragraphs</h2>
+    {% lorem 2 p %}
+  </div>
 </jr-panel>
