--- a/server/pages/templates/pages/pages/style_guide/index.html
+++ b/server/pages/templates/pages/pages/style_guide/index.html
@@ -8,6 +8,7 @@
       {% include './_overview.html' %}
       {% include './_headings.html' %}
       {% include './_paragraphs.html' %}
+      {% include './_links.html' %}
       {% include './_lists.html' %}
     </div>
   </main>
