--- a/client/src/stylesheets/lib/copy/_paragraph.scss
+++ b/client/src/stylesheets/lib/copy/_paragraph.scss
@@ -1,4 +1,6 @@
-p {
+@use './utils.scss';
+
+@include utils.with-namespace('p') {
   font-family: var(--font-family, Georgia, serif);
   font-size: var(--font-size, 1.2rem);
   margin-bottom: var(--margin-bottom, 1rem);
