--- a/server/pages/templates/pages/pages/style_guide/_headings.html
+++ b/server/pages/templates/pages/pages/style_guide/_headings.html
@@ -1,9 +1,11 @@
 <jr-panel>
-  <h2 id="headings">Headings</h2>
-  <h1>Heading 1</h1>
-  <h2>Heading 2</h2>
-  <h3>Heading 3</h3>
-  <h4>Heading 4</h4>
-  <h5>Heading 5</h5>
-  <h6>Heading 6</h6>
+  <div class="copy">
+    <h2 id="headings">Headings</h2>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+  </div>
 </jr-panel>
