--- a/server/pages/templates/pages/pages/style_guide/_overview.html
+++ b/server/pages/templates/pages/pages/style_guide/_overview.html
@@ -1,12 +1,13 @@
 <jr-panel>
-  <h1>Style Guide</h1>
-  <p>
-    This page provides an overview of the style guide by which this app
-    is designed.  Apart from general design guidelines, it contains
-    examples of markup and component specimens.
-  </p>
-  <p>
-    The guide is not exhaustive and intended to cover only the use cases that
-    appear within this application.
-  </p>
+  <div class="copy">
+    <h1>Style Guide</h1>
+    <p>
+      This page provides an overview of the style guide by which this app
+      is designed.  It contains usage guidelines and examples.
+    </p>
+    <p>
+      The guide is not exhaustive and intended to cover only the use cases that
+      appear within this application.
+    </p>
+  </div>
 </jr-panel>
