style-guide: Move Copy to own page, add Prism.

--- a/client/src/stylesheets/pages/pages.scss
+++ b/client/src/stylesheets/pages/pages.scss
@@ -3,3 +3,4 @@
 @use './index/index.scss';
 @use './settings/index.scss' as settings_index;
 @use './style_guide/index.scss' as style-guide_index;
+@use './style_guide/copy.scss';
