--- a/server/pages/templates/pages/layouts/base.html
+++ b/server/pages/templates/pages/layouts/base.html
@@ -8,6 +8,7 @@
     <title>
       {% block title %}{% endblock %}
     </title>
+    {% include './partials/_fonts.html' %}
     <link
       rel="stylesheet"
       type="text/css"
