--- a/server/pages/templates/pages/pages/style_guide/copy/_headings.html
+++ b/server/pages/templates/pages/pages/style_guide/copy/_headings.html
@@ -9,7 +9,7 @@
             &lt;h2>Hello World!&lt;/h2>
           &lt;/div>
 
-          &lt;h2 class="copy">Hello World!&lt;/h2>
+          &lt;h2 class="copy-h2">Hello World!&lt;/h2>
         </code>
       </pre>
     </div>
