--- a/server/pages/templates/pages/pages/style_guide/copy/_links.html
+++ b/server/pages/templates/pages/pages/style_guide/copy/_links.html
@@ -1,8 +1,6 @@
 <jr-panel>
   <div class="copy">
-    <h2>Links &amp; Anchors</h2>
-
-    <h3>Links</h3>
+    <h2>Links</h2>
     <p>
       <a href="/">I am a link.</a>
     </p>
@@ -12,10 +10,14 @@
       semantic standpoint.
     </p>
 
-    <h4>Good</h4>
+    <h3>Good</h3>
     <p>
       This is an interesting YouTube video entitled 
-      <a href="https://www.youtube.com/watch?v=6avJHaC3C2U" target="_blank">
+      <a
+        href="https://www.youtube.com/watch?v=6avJHaC3C2U"
+        target="_blank"
+        rel="noopener"
+      >
         The Art of Code
       </a>
       by Dylan Beattie.
@@ -25,7 +27,7 @@
       <li>The link cannot be disabled.</li>
     </ul>
 
-    <h4>Bad</h4>
+    <h3>Bad</h3>
     <p>
       <a href="#">Open Modal</a>
     </p>
@@ -33,17 +35,11 @@
       Links are not the same as buttons, which perform UI operations, typically
       without losing context, e.g. submitting a form or opening a modal.
     </p>
-    <h5>Additional Conventions</h4>
+    <h4>Additional Conventions</h4>
     <ul>
       <li>
         External links should always open in a new tab.
       </li>
     </ul>
-    <hr>
-
-    <h3>Anchors</h3>
-    <p>
-      <a id="anchors">I am an anchor.</a>
-    </p>
   </div>
 </jr-panel>
