--- a/server/pages/templates/pages/pages/style_guide/copy/_overview.html
+++ b/server/pages/templates/pages/pages/style_guide/copy/_overview.html
@@ -1,39 +1,9 @@
 <jr-panel>
   <div class="copy">
     <h1>Copy</h1>
-    <p>
-      This page contains usage examples for styling general content.
+    <p class="p--intro">
+      This page contains usage examples for styling content expressed with
+      minimal HTML.
     </p>
-    <p>
-      The styles below use type selectors (HTML tags) to keep specificity low
-      and provide leeway for the content to style itself.  Content written with
-      bare html tags simply needs to be placed in a tag with a class of "copy"
-      for these styles to be applied.
-    </p>
-    <div class="prism-wrapper">
-      <pre>
-        <code class="language-html">
-          &lt;div class="copy">
-            &lt;h1>Hello World!&lt;/h1>
-            &lt;p>
-              The h1 and this p tag will have copy styles.
-            &lt;/p>
-          &lt;/div>
-        </code>
-      </pre>
-    </div>
-    <br>
-    <p>
-      Styles can also be applied in-line like so:
-    </p>
-    <div class="prism-wrapper">
-      <pre>
-        <code class="language-html">
-          &lt;p class="copy">
-            This paragraph, and only this paragraph, will have copy styling.
-          &lt;/p>
-        </code>
-      </pre>
-    </div>
   </div>
 </jr-panel>
