--- a/server/pages/templates/pages/pages/style_guide/copy/copy.html
+++ b/server/pages/templates/pages/pages/style_guide/copy/copy.html
@@ -11,10 +11,12 @@
   <main id="pages-style-guide-copy">
     <div id="pages-style-guide-copy__main">
       {% include './_overview.html' %}
+      {% include './_conventions.html' %}
       {% include './_headings.html' %}
       {% include './_paragraphs.html' %}
       {% include './_links.html' %}
       {% include './_lists.html' %}
+      {% include './_strong.html' %}
     </div>
   </main>
 {% endblock %}
