--- a/client/src/stylesheets/lib/copy/_headings.scss
+++ b/client/src/stylesheets/lib/copy/_headings.scss
@@ -5,23 +5,29 @@
   color: var(--color, inherit);
   font-family: var(--font-family, sans-serif);
   font-size: var(--font-size, 2.4rem);
+  font-weight: var(--font-weight, 400);
   line-height: var(--line-height, 1.2);
   margin-bottom: var(--margin-bottom, 2rem);
 }
 @include utils.with-namespace('h2') {
   border-bottom: var(--border-bottom, thin solid);
+  color: var(--color, inherit);
   font-family: var(--font-family, sans-serif);
   font-size: var(--font-size, 2rem);
+  font-weight: var(--font-weight, 400);
   margin-bottom: var(--margin-bottom, 2rem);
   line-height: var(--line-height, 1.2);
 }
 @include utils.with-namespace('h3') {
+  color: var(--color, inherit);
   font-family: var(--font-family, sans-serif);
   font-size: var(--font-size, 1.6rem);
+  font-weight: var(--font-weight, 400);
   margin-bottom: var(--margin-bottom, 1rem);
   line-height: var(--line-height, 1.2);
 }
 @include utils.with-namespace('h4') {
+  color: var(--color, inherit);
   font-family: var(--font-family, sans-serif);
   font-size: var(--font-size, 1.2rem);
   font-weight: var(--font-weight, bold);
@@ -29,14 +35,18 @@
   line-height: var(--line-height, 1.2);
 }
 @include utils.with-namespace('h5') {
+  color: var(--color, inherit);
   font-family: var(--font-family, sans-serif);
   font-size: var(--font-size, 1rem);
+  font-weight: var(--font-weight, 400);
   margin-bottom: var(--margin-bottom, 1rem);
   line-height: var(--line-height, 1.2);
 }
 @include utils.with-namespace('h6') {
+  color: var(--color, inherit);
   font-family: var(--font-family, sans-serif);
   font-size: var(--font-size, 0.8rem);
+  font-weight: var(--font-weight, 400);
   margin-bottom: var(--margin-bottom, 1rem);
   line-height: var(--line-height, 1.2);
 }
