--- a/client/src/stylesheets/lib/copy/_paragraph.scss
+++ b/client/src/stylesheets/lib/copy/_paragraph.scss
@@ -1,8 +1,22 @@
 @use './utils.scss';
 
 @include utils.with-namespace('p') {
+  color: var(--color, inherit);
   font-family: var(--font-family, Georgia, serif);
   font-size: var(--font-size, 1.2rem);
+  font-weight: var(--font-weight, 400);
   margin-bottom: var(--margin-bottom, 1rem);
   line-height: var(--line-height, 1.5);
+
+  /**
+   * For when this paragraph is used as an introduction to a larger body of
+   * text, e.g. an article.
+   */
+  &[data-intent="intro"] {
+    color: var(--color, inherit);
+    font-family: var(--font-family, Georgia, serif);
+    font-size: var(--font-size, 1.2rem);
+    margin-bottom: var(--margin-bottom, 1rem);
+    line-height: var(--line-height, 1.5);
+  }
 }
