--- a/client/src/stylesheets/lib/copy/utils.scss
+++ b/client/src/stylesheets/lib/copy/utils.scss
@@ -1,18 +1,17 @@
 $NAMESPACE: null !default;
 
 /**
- * Renders a namespaced selector based on the provided selector and a namespace
- * configuration property.  The resulting selectors of this mixin will resolve
- * as either a child of the namespace or as an instance of the selector param
- * with the namespace applied.
+ * Renders a namespaced selector based on the provided tag-name.  The resulting
+ * selectors of this mixin will resolve as either a child of the namespace or
+ * as an instance of the selector param with the namespace applied.
  *
  * @example
  * @use './utils.scss' with ($NAMESPACE: 'foo');
  * @include utils.with-namespace('p') { ... }
- * // renders: .foo p, .p.foo { ... }
+ * // renders: .foo p, .foo-p { ... }
  */
-@mixin with-namespace($selector) {
-  .#{$NAMESPACE} #{$selector}, #{$selector}.#{$NAMESPACE} {
+@mixin with-namespace($tag-name) {
+  .#{$NAMESPACE} #{$tag-name}, .#{$NAMESPACE}-#{$tag-name} {
     @content;
   }
 }
