style-guide: Add basic Aside styles.

--- a/server/pages/templates/pages/pages/style_guide/copy/_conventions.html
+++ b/server/pages/templates/pages/pages/style_guide/copy/_conventions.html
@@ -57,11 +57,13 @@
     </div>
     <br>
     <br>
-    <aside data-intent="warning">
-      The Intents convention is not a substitute for the ARIA specification or
-      semantic HTML tags and attributes.  It's designed as a way to fill in the
-      gaps where a standard or more widely supported API fails to meet the
-      design's needs.
+    <aside data-intent="info">
+      <p>
+        The Intents convention is not a substitute for the ARIA specification or
+        semantic HTML tags and attributes.  It's designed as a way to fill in
+        the gaps where a standard or more widely supported API fails to meet the
+        design's needs.
+      </p>
     </aside>
   </div>
 </jr-panel>
