--- a/server/pages/templates/pages/pages/style_guide/copy/copy.html
+++ b/server/pages/templates/pages/pages/style_guide/copy/copy.html
@@ -17,6 +17,7 @@
       {% include './_links.html' %}
       {% include './_lists.html' %}
       {% include './_strong.html' %}
+      {% include './_aside.html' %}
     </div>
   </main>
 {% endblock %}
