--- a/client/src/stylesheets/lib/copy/_aside.scss
+++ b/client/src/stylesheets/lib/copy/_aside.scss
@@ -2,10 +2,17 @@
 
 @include utils.with-namespace('aside') {
   background-color: var(--background-color, white);
-  border: var(--border, thin solid black);
+  border-bottom: var(--border-bottom, thin solid black);
+  border-left: var(--border-left, thin solid black);
+  border-right: var(--border-right, thin solid black);
+  border-top: var(--border-top, thin solid black);
   display: var(--display, block);
   font-size: var(--font-size, 1.5rem);
   line-height: var(--line-height, 1.4);
   margin: var(--margin, 0rem 0rem 1rem 0rem);
   padding: var(--padding, 2rem);
+
+  p:last-of-type {
+    margin-bottom: 0;
+  }
 }
