--- a/server/pages/templates/pages/pages/style_guide/copy/copy.html
+++ b/server/pages/templates/pages/pages/style_guide/copy/copy.html
@@ -16,6 +16,7 @@
       {% include './_paragraphs.html' %}
       {% include './_links.html' %}
       {% include './_lists.html' %}
+      {% include './_tables.html' %}
       {% include './_strong.html' %}
       {% include './_aside.html' %}
     </div>
