--- a/server/pages/templates/pages/pages/style_guide/index.html
+++ b/server/pages/templates/pages/pages/style_guide/index.html
@@ -13,10 +13,14 @@
             is designed.  It contains usage guidelines and examples.
           </p>
           <p>
-            The guide is not exhaustive and intended to cover only the use cases that
-            appear within this application.
+            The guide is not exhaustive and intended to cover only the use cases
+            that appear within this application.
           </p>
         </div>
+      </jr-panel>
+
+      <jr-panel>
+        <a href="{% url 'pages:style-guide-copy' %}">Copy</a>
       </jr-panel>
     </div>
   </main>
