--- a/server/pages/templates/pages/pages/style_guide/copy/_links.html
+++ b/server/pages/templates/pages/pages/style_guide/copy/_links.html
@@ -10,6 +10,37 @@
       semantic standpoint.
     </p>
 
+    <div class="prism-wrapper">
+      <pre>
+        <code class="language-html">
+          &lt;div class="copy">
+            &lt;a href="#">I am a link!&lt;/a>
+          &lt;/div>
+
+          &lt;a href="#" class="copy-p">I am a link!&lt;/a>
+        </code>
+      </pre>
+    </div>
+    <br>
+
+    <h3>CSS Custom Property API</h3>
+    <!--
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Type</th>
+          <th>Description</th>
+        </tr>
+      </thead>
+      <tr>
+        <td>--color</td>
+        <td>Color</td>
+        <th>Assignes the color of the link.</th>
+      </tr>
+    </table>
+    -->
+
     <h3>Good</h3>
     <p>
       This is an interesting YouTube video entitled 
