--- a/client/src/stylesheets/pages/pages.scss
+++ b/client/src/stylesheets/pages/pages.scss
@@ -4,3 +4,4 @@
 @use './settings/index.scss' as settings_index;
 @use './style_guide/index.scss' as style-guide_index;
 @use './style_guide/copy.scss';
+@use './style_guide/components.scss';
