--- a/server/pages/templates/pages/pages/style_guide/index.html
+++ b/server/pages/templates/pages/pages/style_guide/index.html
@@ -20,7 +20,16 @@
       </jr-panel>
 
       <jr-panel>
-        <a href="{% url 'pages:style-guide-copy' %}">Copy</a>
+        <div class="copy">
+          <ul>
+            <li>
+              <a href="{% url 'pages:style-guide-copy' %}">Copy</a>
+            </li>
+            <li>
+              <a href="{% url 'pages:style-guide-components' %}">Components</a>
+            </li>
+          </ul>
+        </div>
       </jr-panel>
     </div>
   </main>
