--- a/client/src/stylesheets/lib/copy/_link.scss
+++ b/client/src/stylesheets/lib/copy/_link.scss
@@ -13,7 +13,7 @@
     cursor: pointer;
     color: var(--color);
     display: inline-block;
-    padding: 0rem;
+    padding: 0 0.25em;
     background-image: linear-gradient(
       90deg,
       var(--decoration-color) 0%,
@@ -21,7 +21,7 @@
     );
     background-position: 0 100%;
     background-repeat: no-repeat;
-    background-size: 100% 0.25rem;
+    background-size: 100% 0.2em;
     font-family: var(--font-family);
     font-size: var(--font-size);
     font-weight: var(--font-weight);
