--- a/client/src/stylesheets/lib/copy/_list.scss
+++ b/client/src/stylesheets/lib/copy/_list.scss
@@ -1,43 +1,56 @@
 @use './utils.scss';
 
-
 @include utils.with-namespace('ol') {
+  --font-size: 1rem;
+  --color: inherit;
+
+  color: var(--color);
+  
   &, ol {
     display: block;
-    margin: var(--margin, 0 0 2rem 0);
-    list-style-type: var(--list-style-type, lower-roman);
+    margin: 0 0 2em 0;
+    list-style-type: lower-roman;
   }
 
   li {
-    margin: var(--margin, 0 0 0.5rem 2rem);
-    padding: var(--padding, 0 0 0 0.5rem);
+    margin: 0 0 0.5em 2em;
+    padding: 0 0 0 0.5em;
+    line-height: 1.8;
+    font-size: var(--font-size);
   }
   
   li > ol {
-    margin: var(--margin, 0.5rem 0);
-    list-style-type: var(--list-style-type, lower-alpha);
+    margin: 0.5em 0;
+    list-style-type: lower-alpha;
   }
   
   li > ul {
-    margin: var(--margin, 0.5rem 0);
+    margin: 0.5em 0;
   }
 }
 
 @include utils.with-namespace('ul') {
+  --font-size: 1rem;
+  --color: inherit;
+
+  color: var(--color);
+
   &, ul {
     display: block;
-    margin: var(--margin, 0 0 2rem 0);
-    list-style-type: var(--list-style-type, disc);
+    margin: 0 0 2em 0;
+    list-style-type: disc;
   }
   li {
-    margin: var(--margin, 0 0 0.5rem 2rem);
-    padding: var(--padding, 0 0 0 0.5rem);
+    margin: 0 0 0.5em 2em;
+    padding: 0 0 0 0.5em;
+    line-height: 1.8;
+    font-size: var(--font-size);
   }
   li > ul {
-    margin: var(--margin, 0.5rem 0);
-    list-style-type: var(--list-style-type, circle);
+    margin: 0.5em 0;
+    list-style-type: circle;
   }
   li > ol {
-    margin: var(--margin, 0.5rem 0);
+    margin: 0.5em 0;
   }
 }
