copy-docs: Phrasing.

--- a/server/pages/templates/pages/pages/style_guide/copy/_links.html
+++ b/server/pages/templates/pages/pages/style_guide/copy/_links.html
@@ -5,7 +5,7 @@
       <a href="/">I am a link.</a>
     </p>
     <p>
-      Use links and anchor elements are designed specifically for navigation.
+      Links and anchor elements are designed specifically for navigation.
       They should not be intermixed with buttons, which have entirely different
       semantic meaning.
     </p>
