--- a/server/pages/templates/pages/pages/style_guide/copy/_overview.html
+++ b/server/pages/templates/pages/pages/style_guide/copy/_overview.html
@@ -2,8 +2,15 @@
   <div class="copy">
     <h1>Copy</h1>
     <p class="p--intro">
-      This page contains usage examples for styling content expressed with
-      minimal HTML.
+      This page contains an index and usage examples for styling raw HTML
+      content, mostly type, within the application.
     </p>
+    <aside>
+      <p>
+        The styles listed here are <strong>not</strong> intended to be
+        exhaustive.  They exist here as an index and for easy comparison to
+        other typographic styles used in the application.
+      </p>
+    </aside>
   </div>
 </jr-panel>
