card-component: Initial setup.

--- a/server/pages/templates/pages/pages/style_guide/components/components.html
+++ b/server/pages/templates/pages/pages/style_guide/components/components.html
@@ -11,6 +11,7 @@
   <main id="pages-style-guide-components">
     <div id="pages-style-guide-components__main">
       {% include './_overview.html' %}
+      {% include './_card.html' %}
     </div>
   </main>
 {% endblock %}
